--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   </head>
   <body>
     <header>
+      <a href="./index.html">
+      <a href="./photographer.html">
         <img src="assets/images/logo.png" class="logo" alt="fisheye logo"/>
-        <h1>Nos photographes</h1>
+      </a>
+      <h1>Nos photographes</h1>
     </header>
     <main id="main">
         <div class="photographer_section"></div>
