Feat : Add aria label in the home page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">
+      <a href="./index.html" aria-label="Fisheye Home page">
         <img src="assets/images/logo.png" class="logo" alt="fisheye logo"/>
       </a>
       <h1>Nos photographes</h1>
