Feat : add price div

--- a/photographer.html
+++ b/photographer.html
@@ -17,6 +17,7 @@
         <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
         <div class="photographer-image"></div>
       </div>
+      <div class="photographer-price"></div>
     </main>
     <div id="contact_modal">
 			<div class="modal">
